# haskell-capnp

./: .gitlab-ci.yml  .hlint.yaml  capnp.cabal
ci/: run-ci.sh
cmd/capnpc-haskell/: FrontEnd.hs  IR.hs
cmd/capnpc-haskell/Backends/: Pure.hs  Raw.hs
examples/: HighLevelRead.hs  HighLevelWrite.hs  LowLevelRead.hs  LowLevelWrite.hs  OverloadedLabelsRead.hs  addressbook.capnp  capnp-examples.cabal  gen.sh
examples/Capnp/: Addressbook.hs  Echo.hs
examples/Capnp/Addressbook/: Pure.hs
examples/Capnp/ById/: Xcd6db6afb4a0cf5c.hs
examples/Capnp/ById/Xcd6db6afb4a0cf5c/: Pure.hs
exe/capnpc-haskell/: FrontEnd.hs  IR.hs
exe/capnpc-haskell/Backends/: Pure.hs  Raw.hs
lib/Capnp/: Basics.hs  Classes.hs  Fields.hs  Message.hs  Message2.hs  Mutability.hs  Parsable.hs  Repr.hs  Untyped.hs  Untyped2.hs  UntypedNew.hs
lib/Capnp/Capnp/: Cxx.hs  Json.hs  Persistent.hs  Rpc.hs  RpcTwoparty.hs  Schema.hs
lib/Codec/: Capnp.hs
lib/Data/: Capnp.hs
lib/Data/Capnp/: GenHelpers.hs  Tutorial.hs
lib/Internal/: BoundsCheck.hs
tests/Tests/Module/Capnp/Capnp/: Schema.hs
