cabal-version: 2.2
name:                capnp-examples
version:             0.1.0.0
synopsis:            Examples for haskell-capnp
-- description:
homepage:            https://github.com/zenhack/haskell-capnp
license:             MIT
license-file:        LICENSE
author:              Ian Denhardt
maintainer:          ian@zenhack.net
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md

executable echo-demo
  main-is:             Main.hs
  other-modules:
      Capnp.Echo
    , Capnp.Echo.Pure
    , Capnp.ById.Xd0a87f36fa0182f5
    , Capnp.ById.Xd0a87f36fa0182f5.Pure
  build-depends:
      base ^>=4.11
    , capnp
    , bytestring ^>=0.10
    , data-default ^>=0.7
    , exceptions ^>=0.10
    , vector ^>=0.12
    , network ^>= 2.8.0
    , network-simple ^>= 0.4
  -- hs-source-dirs:
  default-language:    Haskell2010

common addressbook
  other-modules:
      Capnp.Addressbook
    , Capnp.Addressbook.Pure
    , Capnp.ById.Xcd6db6afb4a0cf5c.Pure
    , Capnp.ById.Xcd6db6afb4a0cf5c
  build-depends:
      base ^>=4.11
    , capnp
    , bytestring
    , data-default
    , exceptions
    , text
    , transformers
    , vector
  default-language:    Haskell2010

executable high-level-write
  import: addressbook
  main-is: HighLevelWrite.hs

executable high-level-read
  import: addressbook
  main-is: HighLevelRead.hs

executable low-level-write
  import: addressbook
  main-is: LowLevelWrite.hs

executable low-level-read
  import: addressbook
  main-is: LowLevelRead.hs
